--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 :root {
     --primary-color: #7c3aed;
     --dark-gray : #6b7280;
+    --off-white:#f3f4f6;
 
 }
 
@@ -84,4 +85,17 @@ hr {
 .hero .hero-heading{
     padding-top: 1rem;
     color: var(--dark-gray);
+}
+
+.section{
+    padding:2rem;
+}
+
+.section h1{
+    text-align: center;
+    
+}
+
+.ow{
+    background-color: var(--off-white);
 }
