--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0px;
 }
 
 hr {
@@ -85,6 +86,7 @@ hr {
 .hero .hero-heading{
     padding-top: 1rem;
     color: var(--dark-gray);
+    text-align: center;
 }
 
 .section{
@@ -98,4 +100,20 @@ hr {
 
 .ow{
     background-color: var(--off-white);
+}
+
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+
+}
+
+.footer .link{
+    color: white;
+}
+.footer ul{
+    padding-inline-start: 0px;
 }
